Modified bio from linkedin

--- a/index.html
+++ b/index.html
@@ -139,8 +139,29 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Sohaib Rabbani</strong> I am currently working at Computer Vision & Graphics Lab, LUMS on developing state-of-the-art AI/ML applications mainly in the field of Computer Vision. He has a track record of innovation and 3+ years of research and industry experience in designing Machine Learning (ML)-based solutions.</p>
-										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+										<p><strong>Hi I'm Sohaib Rabbani</strong> I am currently working at Computer Vision & Graphics Lab, LUMS on developing state-of-the-art AI/ML applications mainly in the field of Computer Vision. I have a track record of innovation and 3+ years of research and industry experience in designing Machine Learning (ML)-based solutions.</p>
+										<p>I am an enthusiastic philomath (love to learn) and I love to do Machine Learning in my busy time. I occasionally work on Android, WordPress, .NET Framework. 
+											<br> I am driven, inquisitive, and sharp-witted.
+											<br><br>Current Work & Hobbies:
+											<ul>
+												<li>Working as a Research Officer in the field of Machine Learning & Computer Vision.</li>
+												<li>Doing MS (CS) with a concentration in Machine Learning.</li>
+												<li>Started writing blogs about my work and my learnings.</li>
+												<li>Learning about the ingredients of being a successful entrepreneur & creator.</li>
+												<li>Reading books about AI & self-improvement currently.</li>
+												<li>Trying to write poetry/songs (will record them in future).</li> 
+											</ul>
+											<br>My Past:
+											<ul>
+											<li>I worked at PakWheels for a year as an Android Developer.</li>
+											<li>I was the President of the Computer Society (FCAP) for more than a year during my bachelors (NUCES-FAST).</li>
+											<li>I have successfully presided/conducted 20+ technical events and competitions.</li>
+											<li>I started a venture with 2 people in 2016, where we provided IT solutions ranging from management systems to mobile apps for different companies.</li>
+											</ul>
+											<br>
+											<b>Motivation for choosing Artificial Intelligence:</b>
+											<br>Even after choosing Computer Science as a choice of study, I was always fascinated with the concepts of a number of fields (i.e. Medical, Engineering, Arts, etc.). So, during my junior year, I started exploring different areas of study where Computer Science can be applicable, and just because of my fascination for Artificial Intelligence from childhood, I stumbled upon this conglomerate of disciplines which encompassed the exact idea I was searching for. Rest is Present!
+											</p>
 									</div>
 								</div>
 							</div>
